--- a/style.css
+++ b/style.css
@@ -32,37 +32,109 @@ body {
   flex-direction: column;
   align-items: center;
 }
-.image-cube {
-  position: fixed;
-  top: 42%;
-  left: 13.5%;
-  z-index: 9999;
-}
+
 .card {
   background-image: url(./images/bg-pattern-desktop.svg);
   background-repeat: no-repeat;
   background-size: contain;
   background-color: #fff;
   border-radius: 0.625rem;
-  gap: 3rem;
   overflow: hidden;
   display: flex;
+  min-width: 1000px;
+  max-width: 1000px;
+  padding: 2rem;
+  padding-inline: 3rem;
 }
+.image-cube {
+  position: fixed;
+  top: 42%;
+  left: 19.1%;
+  z-index: 9999;
+}
+
 .left {
+  align-self: center;
   display: block;
   position: relative;
-  left: -91px;
+  left: -15%;
+  max-width: 100%;
 }
+.right {
+  margin-right: 2rem;
+}
+.right h1 {
+  color: #201e36;
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+.title {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  cursor: pointer;
+}
+.title h2 {
+  color: hsl(240, 6%, 50%);
+  font-weight: 400;
+  font-size: 1rem;
+  letter-spacing: 0.1rem;
+}
+.questions-container {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+.questions-container :not(:first-child) {
+  margin-top: 0.5rem;
+}
+
+.questions-container hr {
+  border: none;
+  border-top: 1px solid hsl(240, 5%, 91%);
+  transition: all 2s;
+}
+.paragraph {
+  display: none;
+  overflow: hidden;
+  color: hsl(240, 6%, 50%);
+  font-size: 0.8rem;
+  transition: all 2s;
+}
+.active,
+.questions:hover {
+  color: hsl(237, 12%, 33%);
+  transition: 0.2s ease-in;
+}
+.questions {
+  min-width: 400px;
+  max-width: 400px;
+  transition: all 2s;
+}
+@media (max-width: 768px) {
+  .image-cube {
+    top: 30%;
+    left: 5%;
+    width: 60%;
+  }
+
+  .left {
+    left: -5%;
+  }
+}
+
 @media screen and (max-width: 480px) {
   .card {
     background-image: url(./images/bg-pattern-mobile.svg);
   }
 }
 .attribution {
+  color: #fff;
   margin-top: 2rem;
   font-size: 12px;
   text-align: center;
 }
 .attribution a {
-  color: hsl(228, 45%, 44%);
+  color: yellow;
 }
